# finger-pointer

./: .gitignore  CMakeLists.txt
.github/workflows/: build-and-release.yml
res/: resource.rc
src/: application.c  application.cpp  application.h  audio.c  audio.cpp  audio.h  d2d1_vtbl.h  easing.h  helper.h  main.c  main.cpp  mat3x2f.h  openurl.h  pointer.cpp  pointer.h  resource.h  resource.rc  resourcex.h  safemem.h  sprite.c  sprite.cpp  sprite.h  timer.c  timer.cpp  timer.h  trayicon.c  trayicon.cpp  trayicon.h  tweener.c  tweener.cpp  tweener.h
